crates/analyzer/tests/snapshots/errors__invalid_chain_field.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: cannot find value `chain` in this scope
  ┌─ compile_errors/invalid_chain_field.fe:3:9
  │
3 │         chain.foo
  │         ^^^^^ undefined


